# Spiral

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Fresh_Ubuntu_Instructions.md  README.md  docker-bake.hcl
Client/: CMakeLists.txt  Dockerfile
Client/ build/: CMakeCache.txt  Makefile  cmake_install.cmake
Client/include/: client.h  spiral.h
Client/release/: CMakeCache.txt  Makefile  cmake_install.cmake
Client/src/: client.cpp  spiral.cpp
Database/Colouring/Indices/: color_indices_10_2.txt  color_indices_11_2.txt  color_indices_13_2.txt  color_indices_14_2.txt  color_indices_16_2.txt  color_indices_17_2.txt  color_indices_18_2.txt  color_indices_20_2.txt  color_indices_21_2.txt  (+10 more)
Database_Data/: META  colorA_10.json  colorA_12.json  colorA_14.json  colorA_16.json  colorA_18.json  colorA_3.json  colorB_10.json  colorB_12.json  colorB_14.json  colorB_16.json  colorB_18.json  colorB_3.json  colorC_10.json  colorC_12.json  colorC_14.json  colorC_16.json  colorC_18.json  colorC_3.json  colorD_10.json  colorD_12.json  colorD_14.json  colorD_16.json  colorD_18.json  colorE_10.json  colorE_12.json  colorE_14.json  colorE_16.json  colorE_18.json  colorF_10.json  colorF_12.json  colorF_14.json  colorF_16.json  colorF_18.json  colorG_10.json  colorG_12.json  colorG_14.json  colorG_16.json  colorG_18.json  colorH_10.json  (+34 more)
Documents/: CONFIG  ENCODING
Evaluation/: evaluate.py
Evaluation/Data/: Answer.server  Database_Generation.server  Extract_Response.client  Meta  Query_Cost.communication  Query_Generation.client  Rate.client  Response_Cost.communication  Total_Cost.communication
Evaluation/Latex_Tables/: Answer_time.tex  Encoding_time.tex  Query_cost.tex  Query_extraction_time.tex  Query_generation_time.tex  Rate.tex  Response_cost.tex  Total_cost.tex
Original/: Dockerfile  select_params.py
Original/src/: spiral.cpp
PIR_Server/: CMakeLists.txt
PIR_Server/include/: spiral.h
PIR_Server/src/: spiral.cpp
Query_Storage/: Default.query
Report/: Main.tex  Spiral.bib
Report/Content/: Experiments_and_Evaluation.tex  Implementation.tex  Overview.tex
Seperated/: CMakeLists.txt
Seperated/build_10_32/: CMakeCache.txt  Makefile  cmake_install.cmake
Seperated/build_20_256/: CMakeCache.txt  Makefile  cmake_install.cmake
Seperated/build_20_32/: CMakeCache.txt  Makefile  cmake_install.cmake
Seperated/build_30_32/: CMakeCache.txt  Makefile  cmake_install.cmake
Seperated/include/: spiral.h
Seperated/src/: spiral.cpp
src/: client.cpp  spiral.cpp  testing.cpp
(+49 files in other folders)
